compiler/fir/analysis-tests/testData/resolveWithStdlib/statics/extensions/StaticExtensionCallFromNonStaticScope.kt
class A {
    fun foo() {}

    static {
        fun baz() {}
    }
}

fun A.bar() {
    foo()
    <!UNRESOLVED_REFERENCE!>baz<!>()
    A.baz()
}
